mpDNS/mpDNSlib/include/alloc.h


#ifndef _ALLOC_H_
#define _ALLOC_H_


void * MALLOC (size_t size);

void * REALLOC (void *ptr, size_t size);

void * FREE (void *ptr);


#endif

/*EOF*/